# Multimedia-Visualizer

./: CMakeLists.txt  README.md  main.cpp  videoreader.cpp
.cache/clangd/index/: main.cpp.C0B0C353D09B2FBB.idx  videoreader.cpp.9A6AD2502E1C3260.idx  videoreader.h.538DE8481F11276F.idx
